# HF-TRL-Slurm

./: .gitignore  pyproject.toml  requirements.txt  test_setup.py
datasets/: GRPO_DATASETS.md  README.md  SFT_DATASETS.md
docs/: NAMING_CONVENTION.md  SLURM_GUIDE.md  claude-code-autocompact-mental-model.md  claude-code-autocompact.md  drac-ticket-fc10713.md  drac-ticket-login-fork-eagain.md  openenv-run-guide.md  paper-direction-rethinking-generalization-sft.md
jobs/: batch-gguf-gemma4-external.sh  batch-gguf-model-cards.sh  batch-gguf-trl-models.sh  batch-gguf-unsloth-models.sh  build-claude-reasoning-distillation.sh  clean-fable-2m.sh  clean-mythos-25k.sh  deepseek-r1-1.5b-grpo-dapo-math-10k.sh  deepseek-r1-1.5b-grpo-openmath2.sh  deepseek-r1-1.5b-grpo-openr1math.sh  deepseek-r1-7b-grpo-openmath2.sh  deepseek-r1-7b-grpo-openr1math.sh  dispatch-gguf-unsloth.sh  gguf-single-model.sh  gpu-diagnostic.sh  granite-4.0-micro-grpo-numina-10k.sh  granite-4.0-micro-grpo-numina-20k-continue.sh  granite-4.0-micro-grpo-numina-20k.sh  granite-4.0-micro-grpo-numina-chain.sh  lfm2-1.2b-grpo-numina.sh  lfm2-1.2b-sft-ultrachat.sh  lfm2-2.6b-grpo-numina.sh  lfm2-350m-grpo-numina.sh  lfm2-700m-grpo-numina.sh  lfm2.5-1.2b-grpo-numina-10k-resume.sh  lfm2.5-1.2b-grpo-numina-10k.sh  llama-3.2-3b-grpo-numina-10k.sh  nemotron-3b-grpo-numina.sh  openmath-nemotron-1.5b-grpo-numina-10k.sh  probe-fable-models-unsloth.sh  probe-granite4.1-unsloth.sh  probe-new-models-unsloth.sh  qwen1.5b-sft-ultrachat.sh  qwen2.5-0.5b-grpo-numina-100k.sh  qwen2.5-0.5b-grpo-numina.sh  qwen2.5-0.5b-grpo-openmath2.sh  qwen2.5-0.5b-grpo-openr1math.sh  qwen2.5-1.5b-grpo-numina.sh  qwen2.5-1.5b-grpo-openmath2.sh  qwen2.5-1.5b-grpo-openr1math.sh  (+155 more)
logs/: qwen1.5b-sft-ultrachat-16576709.err  qwen1.5b-sft-ultrachat-16576709.out  qwen1.5b-sft-ultrachat-16577990.err  qwen1.5b-sft-ultrachat-16577990.out  qwen1.5b-sft-ultrachat-16579621.err  qwen1.5b-sft-ultrachat-16579621.out  qwen1.5b-sft-ultrachat-16587348.err  (+7 more)
(+313 files in other folders)
